syntax = "proto3";

package appserver_serves_ui;
option go_package = "github.com/mxc-foundation/lpwan-app-server/api/appserver-serves-ui;appserver_serves_ui";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ServerInfoService {
    // get version
    rpc GetAppserverVersion(google.protobuf.Empty) returns (GetAppserverVersionResponse) {
        option(google.api.http) = {
            get: "/api/server-info/appserver-version"
        };
    };

    rpc GetServerRegion(google.protobuf.Empty) returns (GetServerRegionResponse) {
        option(google.api.http) = {
            get: "/api/server-info/server-region"
        };
    };
}

message GetAppserverVersionResponse {
    string version = 1;
}

enum ServerRegion {
    NOT_DEFINED = 0;
    AVERAGE = 1;
    RESTRICTED = 2;
}

message GetServerRegionResponse {
    string server_region = 1;
}
