syntax = "proto3";

package appserver_serves_ui;
option go_package = "github.com/mxc-foundation/lpwan-app-server/api/appserver-serves-ui;appserver_serves_ui";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service ShopifyIntegration {
    // GetOrdersByUserID returns a list of shopify orders filtered by given user id
    rpc GetOrdersByUserID (GetOrdersByUserIDRequest) returns (GetOrdersByUserIDResponse) {
        option (google.api.http) = {
			get: "/api/shopify-integration/orders/get/{user_id}"
		};
    }
}

message GetOrdersByUserIDRequest {
    int64 user_id = 1;
}

message ShopifySuccessfulOrder {
    string shopify_account = 1;
    string order_id = 2;
    google.protobuf.Timestamp created_at = 3;
    int64 amount = 4;
    string product_id = 5;
    string bonus_status = 6;
}

message GetOrdersByUserIDResponse {
    repeated ShopifySuccessfulOrder successful_orders = 1;
}